--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,12 @@
-pip==19.2.3
-bump2version==0.5.11
-wheel==0.33.6
+pip==22.0.3
+bump2version==1.0.1
+wheel==0.37.1
 watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
-coverage==4.5.4
+flake8==4.0.1
+tox==3.24.5
+coverage==6.3.1
 Sphinx==1.8.5
 twine==1.14.0
 
-pytest==6.2.4
-black==21.7b0
+pytest==6.2.5
+black==22.1.0
