remove references to flake8

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,17 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py36, py37, py38, py39, black
 
 [travis]
 python =
+    3.9: py39
     3.8: py38
     3.7: py37
     3.6: py36
 
-[testenv:flake8]
+[testenv:black]
 basepython = python
-deps = flake8
-commands = flake8 dataforseo_sdk tests
+deps = black
+commands = black --check dataforseo_sdk tests
 
 [testenv]
 setenv =
