--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,12 @@
-pip==22.0.3
+pip==22.0.4
 bump2version==1.0.1
 wheel==0.37.1
-watchdog==0.9.0
+watchdog==0.10.4
 tox==3.24.5
-coverage==6.3.1
-Sphinx==1.8.5
-twine==1.14.0
+coverage==6.3.2
+safety==1.10.3
+Sphinx==1.8.6
+twine==1.15.0
 
 pytest==6.2.5
 pytest-cov==3.0.0
