--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,7 +5,8 @@ watchdog==0.10.4
 tox==3.24.5
 coverage==6.3.2
 safety==1.10.3
-Sphinx==1.8.6
+Sphinx==2.4.5
+sphinx_rtd_theme==1.0.0
 twine==1.15.0
 
 pytest==6.2.5
