--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,32 +4,32 @@
 name: Python package
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
-  build:
+    build:
+        runs-on: self-hosted
+        strategy:
+            fail-fast: false
+            matrix:
+                python-version:
+                    ["3.6.15", "3.7.12", "3.8.12", "3.9.12", "3.10.4"]
 
-    runs-on: self-hosted
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python setup.py install
-        if [ -f requirements.txt ]; then pip install -r requirements_dev.txt; fi
-    - name: Lint with black
-      run: make lint
-    - name: Test with pytest
-      run: make test
+        steps:
+            - uses: actions/checkout@v3
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v3
+              with:
+                  python-version: ${{ matrix.python-version }}
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  python setup.py install
+                  if [ -f requirements.txt ]; then pip install -r requirements_dev.txt; fi
+            - name: Lint with black
+              run: make lint
+            - name: Test with pytest
+              run: make test
