--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,6 +22,8 @@ jobs:
             - uses: actions/checkout@v3
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v3
+              env:
+                  AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
               with:
                   python-version: ${{ matrix.python-version }}
             - name: Install dependencies
