--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,11 @@ jobs:
             fail-fast: false
             matrix:
                 python-version:
-                    ["3.6.15", "3.7.12", "3.8.12", "3.9.12", "3.10.4"]
+                    - "3.6"
+                    - "3.7"
+                    - "3.8"
+                    - "3.9"
+                    - "3.10"
 
         steps:
             - uses: actions/checkout@v3
@@ -30,7 +34,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python setup.py install
-                  if [ -f requirements.txt ]; then pip install -r requirements_dev.txt; fi
+                  if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
             - name: Lint with black
               run: make lint
             - name: Test with pytest
