convert from setup.py to setup.cfg
- Moved all package config to a setup.cfg
- Created a pyproject.toml file according to spec
- Update commands in instructions and tox.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,59 @@
+[metadata]
+name = dataforseo_sdk
+version = attr: dataforseo_sdk.__version__
+description = The DataForSEO Python SDK contains a Python library to interact with APIs provided by DataForSEO (https://dataforseo.com/).
+long_description = file: README.rst, HISTORY.rst
+author = Daniel Schaefer
+author_email = danschaefer@gmail.com
+project_urls =
+    Source Code = https://github.com/lieutdan13/dataforseo_sdk
+keywords = dataforseo_sdk, seo, dataforseo
+license = MIT license
+classifiers =
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+
+[options]
+packages = dataforseo_sdk
+install_requires =
+    python-slugify==6.1.1
+    ultra-config==0.6.3
+include_package_data = True
+zip_safe = False
+python_requires = >=3.6
+
+[options.entry_points]
+console_scripts =
+    dataforseo_sdk = dataforseo_sdk.cli:main
+
+[options.extras_require]
+test =
+    black==22.3.0
+    coverage==6.3.2
+    pytest==6.2.5
+    pytest-cov==3.0.0
+    safety==1.10.3
+    tox==3.24.5
+docs =
+    Sphinx==2.4.5
+    sphinx_rtd_theme==1.0.0
+    watchdog==0.10.4
+publish =
+    bump2version==1.0.1
+    twine==1.15.0
+
+
 [bumpversion]
 current_version = 0.1.0
 commit = True
 tag = True
-
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
 
 [bumpversion:file:dataforseo_sdk/__init__.py]
 search = __version__ = '{current_version}'
