--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,8 +33,8 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  python setup.py install
-                  if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+                  pip install .
+                  pip install .[test]
             - name: Lint with black
               run: make lint
             - name: Test with pytest
