--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,7 @@ commands = black --check dataforseo_sdk tests
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+    .[test]
 commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
