remove support for python 3.6 and add 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,24 @@
 [tox]
-envlist = py36, py37, py38, py39, black
+envlist = py37, py38, py39, py310, black, safety
+isolated_build = True
 
-[travis]
+[gh-actions]
 python =
+    3.10: py310
     3.9: py39
     3.8: py38
     3.7: py37
-    3.6: py36
 
 [testenv:black]
 basepython = python
 deps = black
 commands = black --check dataforseo_sdk tests
+
+[testenv:safety]
+deps =
+    .
+    safety
+commands = safety check
 
 [testenv]
 setenv =
