--- a/setup.cfg
+++ b/setup.cfg
@@ -35,12 +35,13 @@ console_scripts =
 
 [options.extras_require]
 test =
-    black==22.3.0
     coverage==6.3.2
     pytest==6.2.5
     pytest-cov==3.0.0
     safety==1.10.3
     tox==3.24.5
+lint =
+    black==22.3.0
 docs =
     Sphinx==2.4.5
     sphinx_rtd_theme==1.0.0
