--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 
 [testenv:black]
 basepython = python
-deps = black
+deps = .[lint]
 commands = black --check dataforseo_sdk tests
 
 [testenv:safety]
