add the dir to scan for black

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,7 +10,7 @@ on:
         branches: [main]
 
 jobs:
-    build:
+    unit-tests:
         runs-on: self-hosted
         strategy:
             fail-fast: false
