--- a/setup.cfg
+++ b/setup.cfg
@@ -34,22 +34,23 @@ console_scripts =
     dataforseo_sdk = dataforseo_sdk.cli:main
 
 [options.extras_require]
+docs =
+    autodocsumm==0.2.8
+    Sphinx==4.5.0
+    sphinx_rtd_theme==1.0.0
+    watchdog==0.10.4
+lint =
+    black==22.3.0
+publish =
+    bump2version==1.0.1
+    twine==4.0.0
 test =
     coverage==6.3.2
     pytest==6.2.5
     pytest-cov==3.0.0
-    safety==1.10.3
     tox==3.24.5
-lint =
-    black==22.3.0
-docs =
-    Sphinx==2.4.5
-    sphinx_rtd_theme==1.0.0
-    watchdog==0.10.4
-publish =
-    bump2version==1.0.1
-    twine==1.15.0
-
+vuln-check =
+    safety==1.10.3
 
 [bumpversion]
 current_version = 0.1.0
