--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ commands = black --check dataforseo_sdk tests
 [testenv:safety]
 deps =
     .
-    safety
-commands = safety check
+    .[vuln-check]
+commands = safety check --full-report --file setup.cfg
 
 [testenv]
 setenv =
